--- a/docs/不足している単語.md
+++ b/docs/不足している単語.md
@@ -1,4 +1,4 @@
-0. は既にgismuにあるもの。
+0. は既に gismu にあるもの。
 1. 
 
 ## 動物
@@ -19,17 +19,27 @@
 1. サメ
 2. エイ
 3. サケ
+
 ### 両生類
-1. カエル - 6500種
-2. サンショウウオ - 
+1. カエル - 6500 種
+2. サンショウウオ -
+
 ### 爬虫類
-1. 蛇 - 3000種以上
-2. トカゲ - 4000種以上
-3. カメ - 約500種 
-4. ワニ - 23種
+0. 蛇 - 3000 種以上
+1. トカゲ - 4000 種以上
+2. カメ - 約 500 種
+3. ワニ - 23 種
+
 #### 恐竜
+恐竜は experimental gismu として追加がある
+
+恐竜綱[rexsa]()
+翼竜、魚竜など厳密には恐竜でないものにも使える語[dinso](https://la-lojban.github.io/sutysisku/lojban/index.html#seskari=cnano&sisku=dinso&bangu=en&versio=masno)
+
+翼竜[ketsu]()
+
 ### 鳥類
-1. 鶏・キジ・アヒル・鴨
+0. 鶏・キジ・アヒル・鴨
 2. タカ・ワシ
 3. フクロウ
 4. ペンギン
@@ -49,6 +59,13 @@
 5. ラクダ
 6. リス
 
+
+### 幻想生物
+0. 妖精
+1. 精霊
+2. ドラゴン
+3. 吸血鬼
+4. 
 
 
 ## 植物
@@ -71,7 +88,7 @@
 
 
 ロジバンを作った者たちは多分魔法使いだ。
-槍、盾、弓のgismuが存在しないことがその証明。
+槍、盾、弓の gismu が存在しないことがその証明。
 これらの武器の重要性は人類なら誰しも知っているはず。
 なのに彼らは槍という偉大な道具を「尖った棒状の武器」と表現する。
 普通の人間でないことは明らかだ。
